Доработка аутентфикации и авторизации и профилей на фронте